fixed collapsed UI background color bug, added more documentation regarding the tree viewer, begun fixing tree grafter

--- a/static/plugin_treeViewer.css
+++ b/static/plugin_treeViewer.css
@@ -26,16 +26,6 @@
     background-color: white;
 }
 
-.expandOptionContainer {
-    padding: 2px;
-    background-color: white;
-    position: absolute;
-    z-index: 500;
-    padding: 5px;
-    -moz-border-radius: 10px;
-    border-radius: 10px;
-}
-
 .descendantAction:hover {
     text-decoration: underline;
     color: blue;
